--- a/UI/UI/style/style.css
+++ b/UI/UI/style/style.css
@@ -1,16 +1,78 @@
-﻿html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, a, font, img, dl, dt, dd, ol, ul, li, legend, table, tbody, tr, th, td { font-family: inherit; font-size: 100%; font-style: inherit; font-weight: inherit; list-style: none outside none; margin: 0; outline: 0 none; padding: 0; }
-a img { border: medium none; }
+body { background: #ffffff; font-family:'Lato', sans-serif; font-weight: 400; font-size:14px; line-height:18px; color:#2f2f2f; overflow-x:hidden }
+* { margin:0; padding:0; outline:0 none; }
+.modal-backdrop { bottom:0; height:auto !important; }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block;}
+img {max-width: 100%; height: auto; border:0; width: auto\9; /* ie8 */}
+a, a:visited, a:focus { text-decoration:none; outline:0; border:0;}
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0;}
+.clearfix { display: inline-block; }
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+.clear { clear:both; }
+ul,li{ list-style-type: none; margin: 0; padding: 0;}
+ol, ul { margin-bottom:0px; }
+a, a:hover, a:visited { }
+h1,h2,h3,h4,h5,h6{ font-weight: normal; margin: 0; padding: 0;}
+table{ border-collapse: collapse;}
+*{ box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; -ms-box-sizing:border-box;}
+p{ margin:0; padding: 0; }
+/***
+Font Family Weight
+    {
+        Thin:100,
+        light:300,
+        regular:400,
+        bold:700,
+        black:900
+    }
 
-.mainPage {
-    width:99%; margin: 0 auto;
+***/
+@font-face {
+    font-family: 'rupee_foradianregular';
+    src: url('../fonts/rupee_foradian-webfont.eot');
+    src: url('../fonts/rupee_foradian-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/rupee_foradian-webfont.woff2') format('woff2'),
+         url('../fonts/rupee_foradian-webfont.woff') format('woff'),
+         url('../fonts/rupee_foradian-webfont.ttf') format('truetype'),
+         url('../fonts/rupee_foradian-webfont.svg#rupee_foradianregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-#weekSelector { display: inline; height: 23px; margin: 0; padding: 0; }
-#weekSelector ul { float: right; margin: 0px 0 0; padding: 0; }
-#weekSelector li { display: inline; margin: 0; padding: 0; }
+/***
+Main CSS Rule
+***/
+.wrapper{ max-width: 100%; margin: 0 auto;}
+.topband { background: #f6f6f6; border-bottom: 1px solid #cccccc; border-top: 1px solid #cccccc; padding:0px 20px 0px 20px; }
+.topband ul, .topband ul li { list-style: none; float: left; }
+.topband ul li { border-right:1px solid #cccccc; }
+.topband ul li a { color: #2b2b2b; float: left; padding: 7px 15px; border-bottom: 2px solid #f6f6f6; }
+.topband ul li a span { display: inline; background: #0066cb; width: 10px; height: 10px; display: inline-block; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -ms-border-radius: 5px;  }
+.topband ul li a.active { border-bottom: 2px solid #0066cb; }
 
-a img { border: medium none;vertical-align:middle; }
+.contentWrapper { padding: 20px; }
+.viewEdit span { float: left; line-height: 24px; }
+.viewEdit select { width: 150px; height: 28px; padding: 5px; float: left; margin-left: 10px; border: 1px solid #cccccc; }
+.calendar { float: right; line-height: 24px; }
 
-h3, #timesheet_top_panel{ background: #0066cb;   padding:10px;}
-#timesheet_top_panel h2 { color: #FFFFFF; font-size: 14px; line-height: 1em; text-align:center;  }
+.employeeInfo { background: #0066cb; padding: 7px; color: #ffffff; text-align: center; position: relative; }
+.employeeInfo a { position: absolute; right: 20px; top: 7px; color: #0066cb; font-size: 10px; background: #ffffff; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; padding: 0px 5px; }
+.tblOffer th{ background: #e5f0ff; font-weight: 700; font-size: 12px; line-height: 14px; color: #0066cb; text-align: center; padding: 7px; border: 1px #9eb6ce solid; white-space: nowrap;}
+.tblOffer th span { display: block; line-height: 16px; }
+.tblOffer td{ border: 1px #9eb6ce solid; padding: 7px; color: #565656; font-size: 11px; text-align: center;}
+.tblOffer td span.value { border: 1px solid #cccccc; padding: 2px; display: block; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; }
+.tblOffer td span.value.absent { background: #fffbdf; }
+.tblOffer td span.value.weekend { background: #d2cece; }
+.tblOffer td.txtCode{ color: #589341; font-size: 12px; font-weight: 700; text-transform: uppercase;}
+.tblOffer td.txtOffer{ color: #565656; font-size: 10px; text-align: center;}
+.tblOffer textarea { resize: none; width: 100%; border: 2px solid #cccccc; height: 100px; }
+.delete { color: #ff0000; font-weight: 700; font-size: 12px; }
+.table-responsive{ border: 1px solid #ddd; overflow-y: hidden; width: 100%; min-height: 0.01%; overflow-x: auto;}
 
+.addRow { padding: 15px 20px; background: #e5f0ff; }
+.addRow a.add { background: green; padding: 5px 15px; color: #ffffff; float: left; }
+.addRow select { width: 150px; height: 28px; padding: 5px; float: left; margin-left: 10px; border: 1px solid #cccccc; }
+
+.btnRow { padding: 20px; text-align: right; }
+.btnRow input { background: #0066cb; color: #ffffff; padding: 8px 20px; border: 0px; margin-left: 15px; cursor: pointer; }
