--- a/UI/UI/style/style.css
+++ b/UI/UI/style/style.css
@@ -61,9 +61,10 @@ Main CSS Rule
 .tblOffer th{ background: #e5f0ff; font-weight: 700; font-size: 12px; line-height: 14px; color: #0066cb; text-align: center; padding: 7px; border: 1px #9eb6ce solid; white-space: nowrap;}
 .tblOffer th span { display: block; line-height: 16px; }
 .tblOffer td{ border: 1px #9eb6ce solid; padding: 7px; color: #565656; font-size: 11px; text-align: center;}
-.tblOffer td span.value {  border: 1px solid #cccccc; padding: 2px; display: block; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; }
-.tblOffer td span.value.absent { background: #fffbdf; }
-.tblOffer td span.value.weekend { background: #d2cece; }
+.tblOffer td input.value { border: 1px solid #cccccc; padding: 2px; display: block; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; width: 100%; text-align: center; }
+.tblOffer td span.value { border: 1px solid #cccccc; padding: 2px; display: block; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; }
+.tblOffer td input.value.absent { background: #fffbdf; }
+.tblOffer td input.value.weekend { background: #d2cece; }
 .tblOffer td.txtCode{ color: #589341; font-size: 12px; font-weight: 700; text-transform: uppercase;}
 .tblOffer td.txtOffer{ color: #565656; font-size: 10px; text-align: center;}
 .tblOffer textarea { resize: none; width: 100%; border: 2px solid #cccccc; height: 100px; }
@@ -76,3 +77,11 @@ Main CSS Rule
 
 .btnRow { padding: 20px; text-align: right; }
 .btnRow input { background: #0066cb; color: #ffffff; padding: 8px 20px; border: 0px; margin-left: 15px; cursor: pointer; }
+
+.wrapper { width: 400px; margin: 0 auto; }
+h1 { text-align: center; color: #0066cb; margin:30px 0px; }
+.loginContainer { border: 1px solid #0066cb; background: #e5f0ff; padding: 20px; }
+.loginContainer .row { margin-bottom: 20px; }
+.loginContainer .row label { width: 100px; display: inline-block; }
+.loginContainer .row input { width: 200px; border: 1px solid #cccccc; padding: 10px; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; }
+.loginContainer .row input[type="submit"] { background: #0066cb; color: #ffffff; border: 0px; cursor: pointer; }
