--- a/UI/UI/style/style.css
+++ b/UI/UI/style/style.css
@@ -76,7 +76,11 @@ Main CSS Rule
 .addRow select { width: 150px; height: 28px; padding: 5px; float: left; margin-left: 10px; border: 1px solid #cccccc; }
 
 .btnRow { padding: 20px; text-align: right; }
-.btnRow input { background: #0066cb; color: #ffffff; padding: 8px 20px; border: 0px; margin-left: 15px; cursor: pointer; }
+.btnRow input { background: #0066cb; color: #ffffff; padding: 8px 20px; border: 0px; margin-left: 15px; cursor: pointer; line-height:3px; }
+
+.btnRowleft { padding: 20px; }
+.btnRowleft input { background: #0066cb; color: #ffffff; padding: 8px 20px; border: 0px; margin-left: 15px; cursor: pointer; line-height:3px; }
+.btn { background: #0066cb; color: #ffffff; padding: 8px 20px; border: 0px; margin-left: 15px; cursor: pointer; line-height:3px; }
 
 .wrapper { width: 400px; margin: 0 auto; }
 h1 { text-align: center; color: #0066cb; margin:30px 0px; }
